# notification

./: .env.example  .gitignore  .local.env.example  CHANGELOG.md  Dockerfile  INSTALLATION_PLAN.md  LICENSE  README.md  coverage.xml  docker-compose.test.yml  gunicorn_conf.py  openapi.json  pyproject.toml
.github/workflows/: notification-build-push.yml  notification-ci.yml  test.yml
src/: config.py  gunicorn_logger.py  main.py  models.py  version.py
tests/: conftest.py  test_api.py  test_version.py
tests/integration/: test_container.py
