[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neosofia-notification"
version = "0.2.1"
description = "Neosofia Notification Service - Contact form relay to Resend"
requires-python = ">=3.12"
authors = [{ name = "Neosofia", email = "platform@neosofia.tech" }]

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-limiter>=3.5.0",
    "flask-talisman>=1.1.0",
    "resend>=2.0.0",
    "pydantic[email]>=2.8.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "logenvelope",
    "gunicorn>=21.0.0",
]

[tool.uv.sources]
logenvelope = { url = "https://github.com/Neosofia/sdk/releases/download/logenvelope-0.3.0/logenvelope-0.3.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=7.1.0",
    "requests>=2.33.0",
    "testcontainers>=4.14.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80 --ignore=tests/integration"
markers = [
    "integration: container-based HTTP integration tests",
    "slow: long-running container or end-to-end integration tests",
]

[tool.coverage.run]
omit = [
    "scripts/*",
    "src/gunicorn_logger.py",
]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src"]
